bootstrap/5.gatewayapi/1.infra.yaml
# ns
apiVersion: v1
kind: Namespace
metadata:
  name: infra

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: infra
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: [IP_ADDRESS]
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.[DOMAIN]"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.[DOMAIN]"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-tls
      allowedRoutes:
        namespaces:
          from: All
